# compfun

./: .gitignore  CMakeLists.txt  README.md
fun1/: CMakeLists.txt  fun1.cpp
fun2/: CMakeLists.txt  fun2.cpp
fun3/: CMakeLists.txt  fun3.cpp
